--- a/cardio_crumble.opam
+++ b/cardio_crumble.opam
@@ -15,6 +15,8 @@ depends: [
   "portmidi" {>= "0.1"}
   "cmdliner" {>= "1.1.1"}
   "odoc" {with-doc}
+  "portmidi"
+  "cmdliner"
 ]
 build: [
   ["dune" "subst"] {dev}
