update portmidi, dune and ocaml versions
Signed-off-by: aryan <aryangodara03@gmail.com>

--- a/cardio_crumble.opam
+++ b/cardio_crumble.opam
@@ -11,10 +11,9 @@ doc: "https://url/to/documentation"
 bug-reports: "https://github.com/username/reponame/issues"
 depends: [
   "ocaml" {>= "5.0.0"}
-  "dune" {>= "3.3" & >= "3.7.0"}
-  "portmidi" {= "0.1"}
-  "cmdliner" {= "1.1.1"}
-  "ocamlformat" {>= "0.24.1"}
+  "dune" {>= "3.3"}
+  "portmidi" {>= "0.1"}
+  "cmdliner" {>= "1.1.1"}
   "odoc" {with-doc}
 ]
 build: [
