--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,31 +36,29 @@ jobs:
       - run: opam exec -- dune runtest
 
   lint-fmt:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Use OCaml 5.0.x
+      - name: Use OCaml ${{ matrix.ocaml-compiler }}
         uses: ocaml/setup-ocaml@v2
         with:
-          ocaml-compiler: 5.0.x
-          dune-cache: true
+          ocaml-compiler: ${{ matrix.ocaml-compiler }}
 
       - name: Lint fmt
         uses: ocaml/setup-ocaml/lint-fmt@v2
 
   lint-opam:
-      runs-on: ubuntu-latest
+      runs-on: ${{ matrix.os }}
       steps:
         - name: Checkout code
           uses: actions/checkout@v3
 
-        - name: Use OCaml 5.0.x
-          uses: ocaml/setup-ocaml@v2
-          with:
-            ocaml-compiler: 5.0.x
-            dune-cache: true
+        - name: Use OCaml ${{ matrix.ocaml-compiler }}
+        uses: ocaml/setup-ocaml@v2
+        with:
+          ocaml-compiler: ${{ matrix.ocaml-compiler }}
 
         - name: Lint opam
           uses: ocaml/setup-ocaml/lint-opam@v2
