fix indentation and lint yaml file
Signed-off-by: aryan <aryangodara03@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,10 @@
+---
 name: Main workflow
-
 on:
-  pull_request:
-  push:
+  pull_request: null
+  push: null
   schedule:
-    # Prime the caches every Monday
     - cron: 0 1 * * MON
-
 jobs:
   build:
     strategy:
@@ -17,26 +15,19 @@ jobs:
           - ubuntu-latest
         ocaml-compiler:
           - 5.0.x
-
     runs-on: ${{ matrix.os }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Use OCaml ${{ matrix.ocaml-compiler }}
         uses: ocaml/setup-ocaml@v2
         with:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
-
       - run: opam install . --deps-only --with-test
-
       - run: opam exec -- dune build
-
       - run: opam exec -- dune runtest
-
   lint-fmt:
-  strategy:
+    strategy:
       fail-fast: false
       matrix:
         os:
@@ -44,21 +35,16 @@ jobs:
           - ubuntu-latest
         ocaml-compiler:
           - 5.0.x
-
     runs-on: ${{ matrix.os }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Use OCaml ${{ matrix.ocaml-compiler }}
         uses: ocaml/setup-ocaml@v2
         with:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
-
       - name: Lint fmt
         uses: ocaml/setup-ocaml/lint-fmt@v2
-
   lint-opam:
     strategy:
       fail-fast: false
@@ -68,17 +54,13 @@ jobs:
           - ubuntu-latest
         ocaml-compiler:
           - 5.0.x
-
       runs-on: ${{ matrix.os }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Use OCaml ${{ matrix.ocaml-compiler }}
-      uses: ocaml/setup-ocaml@v2
-      with:
-        ocaml-compiler: ${{ matrix.ocaml-compiler }}
-
+        uses: ocaml/setup-ocaml@v2
+        with:
+          ocaml-compiler: ${{ matrix.ocaml-compiler }}
       - name: Lint opam
         uses: ocaml/setup-ocaml/lint-opam@v2
